--- a/src/templates/house.html
+++ b/src/templates/house.html
@@ -125,7 +125,7 @@
 <!-- ---------------------------------------------- MODAL DETAIL --------------------------------------------------------->
 
 <div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-fullscreen">
+    <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="nameCircuit"></h1>
@@ -137,18 +137,18 @@
                 <table id="table-detail" class="w-100">
                   <thead id="detail-circuit-head">
                     <tr class="text-center" style="font-size: 14px;">
-                      <th class="border border-dark-subtle px-1">Total de Centros</th>
-                      <th class="border border-dark-subtle px-1">Potencia Total [KW]</th>
-                      <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
-                      <th class="border border-dark-subtle px-1">Tipo de Circuito</th>
-                      <th class="border border-dark-subtle px-1">Largo [MT]</th>
-                      <th class="border border-dark-subtle px-1">Fp</th>
-                      <th class="border border-dark-subtle px-1">Vp [V]</th>
-                      <th class="border border-dark-subtle px-1">Tipo de Aislacion</th>
-                      <th class="border border-dark-subtle px-1">Sección del Conductor [mm2]</th>
-                      <th class="border border-dark-subtle px-1">Disyuntor</th>
-                      <th class="border border-dark-subtle px-1">Prot. Diferencial</th>
-                      <th class="border border-dark-subtle px-1">Opciones</th>
+                      <th class="border border-dark-subtle px-1 table-header">Total de Centros</th>
+                      <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
+                      <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
+                      <!-- <th class="border border-dark-subtle px-1 table-header">Voltaje [V]</th> -->
+                      <!-- <th class="border border-dark-subtle px-1">Tipo de Circuito</th> -->
+                      <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
+                      <!-- <th class="border border-dark-subtle px-1 table-header2">Fp</th> -->
+                      <th class="border border-dark-subtle px-1 table-header">VP [V]</th>
+                      <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
+                      <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
+                      <th class="border border-dark-subtle px-1 table-header">Disyuntor</th>
+                      <th class="border border-dark-subtle px-1 table-header">Prot. Diferencial</th>
                     </tr>
                   </thead>
                   <tbody id="detail-circuit-body"></tbody>
@@ -162,6 +162,8 @@
                       <th class="border border-dark-subtle px-1">Cantidad de Cargas</th>
                       <th class="border border-dark-subtle px-1">Potencia por Carga [W]</th>
                       <th class="border border-dark-subtle px-1">Potencia Total [KW]</th>
+                      <th class="border border-dark-subtle px-1">Voltaje [V]</th>
+                      <th class="border border-dark-subtle px-1">FP</th>
                       <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
                       <th class="border border-dark-subtle px-1">Opciones</th>
                     </tr>
@@ -174,7 +176,7 @@
           
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Understood</button>
+          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">Agregar Cargas</button>
         </div>
       </div>
     </div>
@@ -182,12 +184,12 @@
 
 <!-- ---------------------------------------------------- MODAL ADD LOADS -------------------------------------------------->
 
-<div class="modal fade modal-lg modal-sm" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal fade modal-fullscreen-lg-down" id="staticBackdrop3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="/add_load" method="post">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Agregar Carga</h1>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Agregar Cargas</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body" id="add"></div>
