--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -44,9 +44,13 @@
 }
 
 .table-header{
-  width: 10%;
+  width: 7%;
 }
 
 .table-header2{
-  width: 6%;
+  width: 5%;
+}
+
+.table-header3{
+  width: 9%;
 }
