--- a/src/templates/house.html
+++ b/src/templates/house.html
@@ -140,15 +140,16 @@
                       <th class="border border-dark-subtle px-1 table-header">Total de Centros</th>
                       <th class="border border-dark-subtle px-1 table-header">Potencia Total [KW]</th>
                       <th class="border border-dark-subtle px-1 table-header">Intensidad Total [A]</th>
-                      <!-- <th class="border border-dark-subtle px-1 table-header">Voltaje [V]</th> -->
+                      <th class="border border-dark-subtle px-1 table-header2">FP</th>
+                      <th class="border border-dark-subtle px-1 table-header">Voltaje [V]</th>
                       <!-- <th class="border border-dark-subtle px-1">Tipo de Circuito</th> -->
                       <th class="border border-dark-subtle px-1 table-header">Largo [MT]</th>
                       <!-- <th class="border border-dark-subtle px-1 table-header2">Fp</th> -->
-                      <th class="border border-dark-subtle px-1 table-header">VP [V]</th>
+                      <th class="border border-dark-subtle px-1 table-header2">VP [V]</th>
                       <th class="border border-dark-subtle px-1 table-header">Tipo de Aislacion</th>
                       <th class="border border-dark-subtle px-1 table-header">Conductor [mm2]</th>
-                      <th class="border border-dark-subtle px-1 table-header">Disyuntor</th>
-                      <th class="border border-dark-subtle px-1 table-header">Prot. Diferencial</th>
+                      <th class="border border-dark-subtle px-1 table-header3">Disyuntor</th>
+                      <th class="border border-dark-subtle px-1 table-header3">Diferencial</th>
                     </tr>
                   </thead>
                   <tbody id="detail-circuit-body"></tbody>
@@ -162,8 +163,8 @@
                       <th class="border border-dark-subtle px-1">Cantidad de Cargas</th>
                       <th class="border border-dark-subtle px-1">Potencia por Carga [W]</th>
                       <th class="border border-dark-subtle px-1">Potencia Total [KW]</th>
-                      <th class="border border-dark-subtle px-1">Voltaje [V]</th>
-                      <th class="border border-dark-subtle px-1">FP</th>
+                      <!-- <th class="border border-dark-subtle px-1">Voltaje [V]</th>
+                      <th class="border border-dark-subtle px-1">FP</th> -->
                       <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
                       <th class="border border-dark-subtle px-1">Opciones</th>
                     </tr>
@@ -175,7 +176,7 @@
           </div>
           
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop3">Agregar Cargas</button>
         </div>
       </div>
