--- a/src/templates/house.html
+++ b/src/templates/house.html
@@ -166,6 +166,7 @@
                       <!-- <th class="border border-dark-subtle px-1">Voltaje [V]</th>
                       <th class="border border-dark-subtle px-1">FP</th> -->
                       <th class="border border-dark-subtle px-1">Intensidad Total [A]</th>
+                      <th class="border border-dark-subtle px-1">Largo [MT]</th>
                       <th class="border border-dark-subtle px-1">Opciones</th>
                     </tr>
                   </thead>
