--- a/src/templates/navbar_loadbox.html
+++ b/src/templates/navbar_loadbox.html
@@ -248,7 +248,7 @@
                             <div class="form-text" id="basic-addon4">La Potencia debe ser en Watt.</div>
                             <div class="input-group mt-2">
                                 <span class="input-group-text" id="basic-addon3">Largo del Circuito</span>
-                                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="Ejemplo: 12.5" name="length">
+                                <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4" placeholder="Ejemplo: 12.5" name="total_length_ct">
                             </div>
                             <div class="form-text" id="basic-addon4">Ingresa el largo total del circuito en metros separado por punto.</div>
                         </div>
