Twenty-First Updated

--- a/src/templates/base_loadbox.html
+++ b/src/templates/base_loadbox.html
@@ -31,6 +31,9 @@
         crossorigin="anonymous"
     ></script>
 
+    <!-- SweetAlert Javascript (remote)----->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- Bootstrap JS CDN (remote) -->
     <script
         defer
