--- a/src/templates/summary.html
+++ b/src/templates/summary.html
@@ -1,6 +1,6 @@
 {% extends "base_loadbox.html" %} 
 
-{% block title %} Create Clients {% endblock%}
+{% block title %} Resumén {% endblock%}
 
 {% block content %}
 
