--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -39,6 +39,11 @@
         crossorigin="anonymous"
     ></script>
 
+    <!-- SweetAlert Javascript (remote)----->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="sweetalert2.all.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css">
+
     <!-- Bootstrap JQUERY CDN (remote) -->
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock %}
