--- a/src/templates/navbar_detail.html
+++ b/src/templates/navbar_detail.html
@@ -9,23 +9,11 @@
                 <li class="nav-item">
                     <a class="nav-link text-decoration-underline" aria-current="page" href="/dashboard">Inicio</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticProyect" href="#">Crear Proyecto</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticTableroGeneral" href="#">Nuevo Tablero General</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticTableroDistribucion" href="#">Nuevo Tablero Distribución</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" data-bs-toggle="modal" data-bs-target="#staticBackdrop" href="">Agregar Circuitos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-decoration-underline" href="/summary">Ver Resumén</a> 
-                </li>
             </ul>
             <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-decoration-underline" href="/loadbox/">Atras</a> 
+                </li>
                 <li class="nav-item">
                     <span class="nav-link">@{{ user.first_name }} {{ user.last_name }}</span>
                 </li>
