--- a/src/templates/summary.html
+++ b/src/templates/summary.html
@@ -1,18 +1,21 @@
-{% extends "base_loadbox.html" %} 
+{% extends "base_detail.html" %} 
 
 {% block title %} Resumén {% endblock%}
 
 {% block content %}
-
-<div class="container-fluid">
-    <a href="/loadbox/">Atras</a>
-    <div class="row">
-        <div class="col-lg-12 col-sm-auto">
-            <h3>Resumen</h3>
+<div id="main" data-user-id="{{ user.id }}"></div>
+<div>
+    {% if projects != 0 %}
+        {% for project in projects %}
+            <button class="btn" data-bs-toggle="collapse" id="tg-card" data-bs-target="#project{{ loop.index }}" style="width: 100%;" data-pro-id="{{ project.id }}" onclick="tg_circuit(this)">{{ project.name }}</button>
+            <div class="collapse" id="project{{ loop.index }}"></div>
+        {% endfor %}
+    {% else %}
+        <div class="card card-body border border-dark-subtle" style="width: 100%;">
+            <h6>Aquí se mostrará el detalle de tus proyectos.</h6>
         </div>
-    </div>  
+    {% endif %}
 </div>
-
 {% endblock %}
 
 
